-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.6.1
-
None
-
-
45bcf958b (dev), 203e7da8e (6.7), 7c0ba71d6 (6.6), cd8b94df4 (6.6.2)
Segmentation fault in the process of loading/unloading 3D objects (3D view) through the Loader.
Some time after startup, a segmentation fault occurs with a breakpoint in the qsharedpointer.cpp file. Sample code is attached.
shader_cmake_program.zip
backtrace.txt
- is duplicated by
-
QTBUG-121390 Live Preview with a 3D project crashes on with Qt 6.6.1
-
- Closed
-
- mentioned in
-
Page Loading...
For Gerrit Dashboard: QTBUG-120424 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
528122,6 | Detach QQuick3DWindowAttachment from QQuickWindow in destructor | dev | qt/qtquick3d | Status: MERGED | +2 | 0 |
534731,2 | Detach QQuick3DWindowAttachment from QQuickWindow in destructor | 6.7 | qt/qtquick3d | Status: MERGED | +2 | 0 |
534775,2 | Detach QQuick3DWindowAttachment from QQuickWindow in destructor | 6.6 | qt/qtquick3d | Status: MERGED | +2 | 0 |
534860,2 | Detach QQuick3DWindowAttachment from QQuickWindow in destructor | 6.6.2 | qt/qtquick3d | Status: MERGED | +2 | 0 |