Detach QQuick3DWindowAttachment from QQuickWindow in destructor

While loading/unloading Quick3D repeatedly,
a deleted windowAttachment can be accessed through QQuickWindow.

Fixes: QTBUG-120424
Fixes: QTBUG-121390
Pick-to: 6.7 6.6 6.6.2
Change-Id: If53e20c2468d4a1f7656087e1d58976760db6d90
Reviewed-by: Tim Jenssen <tim.jenssen@qt.io>
Reviewed-by: Christian Strømme <christian.stromme@qt.io>