src/quick3d/qquick3dscenemanager.cpp
@@ -465,6 +465,9 @@ QQuick3DWindowAttachment::~QQuick3DWindowAttachment()
     QSSG_CHECK(QSSG_DEBUG_COND(resourceCleanupQueue.isEmpty()));
     QSSG_CHECK(QSSG_DEBUG_COND(pendingResourceCleanupQueue.isEmpty()));
 
+    if (m_window)
+        m_window->setProperty(qtQQ3DWAPropName, QVariant());
+
     QSSG_CHECK_X(!m_rci || m_rci.use_count() == 1, "RCI has unexpected reference count!");
 }
 
